@@ -1,3 +1,9 @@
+2004-08-19  Chad Fowler  <chad@chadfowler.com>
+
+	* lib/rubygems/specification.rb: #files auto-includes any #extensions,
+	#extra_rdoc_files, #test_files, etc. that weren't explicitly added
+	to the file list.
+
 2004-08-18  Chad Fowler  <chad@chadfowler.com>
 
 	* lib/rubygems/specification.rb: One more bug with #test_files.
